# coord-consoled

./: .gitignore  CMakeLists.txt  README.md
config/: consoled.ini
resource/client/: index.html
resource/client/static/js/: manifest.1f63196401984e6d2496.js  manifest.1f63196401984e6d2496.js.map
script/consoled/: main.lua
src/: consoled.cc  consoled.h  interface.cc  interface.pkg  main.cc
src/consoled/: consoled_agent.cc  consoled_agent.h  consoled_request.cc  consoled_request.h  consoled_server.cc  consoled_server.h
